// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pipe snapshot tests adjacent images overlap 1`] = `
Array [
  Object {
    "nodes": Array [
      "- we can think of callbacks as a continuation, a secondary half that runs after a time-gap that separates it from the first half",
    ],
  },
  Object {
    "nodes": Array [
      "\\"w",
      Object {
        "$": Object {
          "color": "#e6e6e6",
        },
        "_": "hen we refer to functions as continuations, what we mean is, we did the first half of our program now, and we wrap the second half of our program up in a callback",
        "tags": Array [],
      },
      "\\"",
    ],
  },
  Object {
    "nodes": Array [],
  },
  Object {
    "nodes": Array [
      "- the instructor suggests that callback hell doesnt actually have to do with indentation, as we could rewrite a \\"callback hell\\" without nesting",
    ],
  },
  Object {
    "nodes": Array [
      Object {
        "$": Object {
          "height": "100px",
          "width": "100px",
        },
        "other_attributes": Object {
          "offset": 440,
        },
        "tags": Array [],
        "type": "png",
      },
      Object {
        "$": Object {
          "height": "200px",
          "width": "200px",
        },
        "other_attributes": Object {
          "offset": 441,
        },
        "tags": Array [],
        "type": "png",
      },
    ],
  },
  Object {
    "nodes": Array [
      "the instructor suggests that t",
      Object {
        "$": Object {
          "color": "#e6e6e6",
        },
        "_": "here are two conceptually deficient",
        "tags": Array [],
      },
      " problems with callbacks",
    ],
  },
]
`;

exports[`pipe snapshot tests empty newline ignored 1`] = `
Array [
  Object {
    "nodes": Array [
      "the instructor suggests",
    ],
  },
  Object {
    "nodes": Array [],
  },
  Object {
    "nodes": Array [
      "generators will solve",
    ],
  },
  Object {
    "nodes": Array [],
  },
  Object {
    "nodes": Array [],
  },
  Object {
    "nodes": Array [
      "if a yield",
    ],
  },
  Object {
    "nodes": Array [],
  },
  Object {
    "nodes": Array [
      "instead ",
    ],
  },
  Object {
    "nodes": Array [],
  },
  Object {
    "nodes": Array [],
  },
  Object {
    "nodes": Array [],
  },
  Object {
    "nodes": Array [
      "yield > pause > then > it.next",
    ],
  },
]
`;

exports[`pipe snapshot tests monospace style not fully applied 1`] = `
Array [
  Object {
    "nodes": Array [
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#89ddff",
        },
        "_": "i ",
        "tags": Array [
          "code",
          "small",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
        },
        "_": "a ",
        "tags": Array [
          "code",
          "small",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#c792ea",
        },
        "_": "f ",
        "tags": Array [
          "code",
          "small",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#c3e88d",
        },
        "_": "''",
        "tags": Array [
          "code",
          "small",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#89ddff",
        },
        "_": ";",
        "tags": Array [
          "code",
          "small",
        ],
      },
    ],
  },
  Object {
    "nodes": Array [
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#89ddff",
        },
        "_": "import * ",
        "tags": Array [
          "code",
          "small",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#c792ea",
        },
        "_": "f ",
        "tags": Array [
          "code",
          "small",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#c3e88d",
        },
        "_": "''",
        "tags": Array [
          "code",
          "small",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#89ddff",
        },
        "_": ";",
        "tags": Array [
          "code",
          "small",
        ],
      },
    ],
  },
]
`;

exports[`pipe snapshot tests offset images 1`] = `
Array [
  Object {
    "nodes": Array [],
  },
  Object {
    "nodes": Array [
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#c792ea",
        },
        "_": "let ",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
        },
        "_": "it ",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#89ddff",
        },
        "_": "= ",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#82aaff",
        },
        "_": "gen",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#f78c6c",
        },
        "_": "()",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#89ddff",
        },
        "_": ";",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
    ],
  },
  Object {
    "nodes": Array [
      Object {
        "$": Object {
          "background-color": "#9a1197",
          "color": "#c792ea",
        },
        "_": "console",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#9a1197",
          "color": "#89ddff",
        },
        "_": ".",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#9a1197",
          "color": "#82aaff",
        },
        "_": "log",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#9a1197",
          "color": "#f78c6c",
        },
        "_": "(",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#9a1197",
        },
        "_": "it",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#9a1197",
          "color": "#89ddff",
        },
        "_": ".",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#9a1197",
          "color": "#82aaff",
        },
        "_": "next",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#9a1197",
          "color": "#f78c6c",
        },
        "_": "())",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#9a1197",
          "color": "#89ddff",
        },
        "_": ";",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
    ],
  },
  Object {
    "nodes": Array [
      Object {
        "$": Object {
          "background-color": "#498b49",
          "color": "#c792ea",
        },
        "_": "console",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#498b49",
          "color": "#89ddff",
        },
        "_": ".",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#498b49",
          "color": "#82aaff",
        },
        "_": "log",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#498b49",
          "color": "#f78c6c",
        },
        "_": "(",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#498b49",
        },
        "_": "it",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#498b49",
          "color": "#89ddff",
        },
        "_": ".",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#498b49",
          "color": "#82aaff",
        },
        "_": "next",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#498b49",
          "color": "#f78c6c",
        },
        "_": "(5))",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#498b49",
          "color": "#89ddff",
        },
        "_": ";",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
    ],
  },
  Object {
    "nodes": Array [],
  },
  Object {
    "nodes": Array [],
  },
  Object {
    "nodes": Array [
      Object {
        "$": Object {
          "height": "100px",
          "width": "100px",
        },
        "other_attributes": Object {
          "offset": 68,
        },
        "tags": Array [],
        "type": "png",
      },
    ],
  },
  Object {
    "nodes": Array [],
  },
  Object {
    "nodes": Array [],
  },
  Object {
    "nodes": Array [
      "example2",
    ],
  },
  Object {
    "nodes": Array [
      Object {
        "$": Object {
          "height": "200px",
          "width": "200px",
        },
        "other_attributes": Object {
          "offset": 81,
        },
        "tags": Array [],
        "type": "png",
      },
    ],
  },
  Object {
    "nodes": Array [
      "(run is equivalent to it.next)",
    ],
  },
]
`;

exports[`pipe snapshot tests offset images 2`] = `
Array [
  Object {
    "nodes": Array [
      Object {
        "$": Object {
          "background-color": "#498b49",
          "color": "#89ddff",
        },
        "_": " ",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#498b49",
          "color": "#ffffff",
        },
        "_": " 5",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
    ],
  },
  Object {
    "nodes": Array [
      Object {
        "$": Object {
          "background-color": "#498b49",
          "color": "#89ddff",
        },
        "_": "  ",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#498b49",
          "color": "#c792ea",
        },
        "_": "let ",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#498b49",
        },
        "_": "y ",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#498b49",
          "color": "#89ddff",
        },
        "_": "= ",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#498b49",
          "color": "#f78c6c",
        },
        "_": "0 ",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#498b49",
          "color": "#89ddff",
        },
        "_": "+ ",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
    ],
  },
  Object {
    "nodes": Array [],
  },
  Object {
    "nodes": Array [
      Object {
        "$": Object {
          "height": "100px",
          "width": "100px",
        },
        "other_attributes": Object {
          "offset": 20,
        },
        "tags": Array [],
        "type": "png",
      },
    ],
  },
  Object {
    "nodes": Array [],
  },
  Object {
    "nodes": Array [],
  },
  Object {
    "nodes": Array [
      "example2",
    ],
  },
  Object {
    "nodes": Array [
      Object {
        "$": Object {
          "height": "200px",
          "width": "200px",
        },
        "other_attributes": Object {
          "offset": 33,
        },
        "tags": Array [],
        "type": "png",
      },
    ],
  },
  Object {
    "nodes": Array [
      "(run is equivalent to it.next)",
    ],
  },
]
`;

exports[`pipe snapshot tests offset images, tables, and codebox 1`] = `
Array [
  Object {
    "nodes": Array [
      "- fr",
      Object {
        "$": Object {
          "color": "#ffffff",
        },
        "_": " and ",
        "tags": Array [],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#ffffff",
        },
        "_": "split",
        "tags": Array [
          "code",
        ],
      },
      Object {
        "$": Object {
          "color": "#ffffff",
        },
        "_": ".",
        "tags": Array [],
      },
    ],
  },
  Object {
    "nodes": Array [
      Object {
        "$": Object {},
        "other_attributes": Object {
          "col_max_width": 100,
          "col_min_width": 100,
          "offset": 16,
        },
        "table": Object {
          "td": Array [
            Array [
              "yacine",
              "26",
            ],
            Array [
              "kamel",
              "27",
            ],
            Array [
              "hachemi",
              "26",
            ],
            Array [
              "",
              "",
            ],
            Array [
              "",
              "",
            ],
            Array [
              "amine",
              "26",
            ],
          ],
          "th": Array [
            "name",
            "age",
          ],
        },
        "tags": Array [],
        "type": "table",
      },
    ],
  },
  Object {
    "nodes": Array [],
  },
  Object {
    "nodes": Array [],
  },
  Object {
    "nodes": Array [
      ">regex functions",
    ],
  },
  Object {
    "nodes": Array [
      "a) regex.test returns a boolean if the pattern matches",
    ],
  },
  Object {
    "nodes": Array [
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#c792ea",
        },
        "_": "let ",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
        },
        "_": "str ",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#89ddff",
        },
        "_": "= ",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#c3e88d",
        },
        "_": "\`Is this This?\`",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#89ddff",
        },
        "_": ";",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
    ],
  },
  Object {
    "nodes": Array [],
  },
  Object {
    "nodes": Array [
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#c792ea",
        },
        "_": "console",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#89ddff",
        },
        "_": ".",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#82aaff",
        },
        "_": "log",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#f78c6c",
        },
        "_": "(",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#c3e88d",
        },
        "_": "/isd/g",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#89ddff",
        },
        "_": ".",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#82aaff",
        },
        "_": "test",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#f78c6c",
        },
        "_": "(",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
        },
        "_": "str",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#f78c6c",
        },
        "_": "))",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#89ddff",
        },
        "_": "; ",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#546e7a",
        },
        "_": "// false",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
    ],
  },
  Object {
    "nodes": Array [
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#c792ea",
        },
        "_": "console",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#89ddff",
        },
        "_": ".",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#82aaff",
        },
        "_": "log",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#f78c6c",
        },
        "_": "(",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#c3e88d",
        },
        "_": "/is/g",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#89ddff",
        },
        "_": ".",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#82aaff",
        },
        "_": "test",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#f78c6c",
        },
        "_": "(",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
        },
        "_": "str",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#f78c6c",
        },
        "_": "))",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#89ddff",
        },
        "_": "; ",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#546e7a",
        },
        "_": "// true",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
    ],
  },
  Object {
    "nodes": Array [],
  },
  Object {
    "nodes": Array [
      "b) regex.exec returns a regexArray",
    ],
  },
  Object {
    "nodes": Array [
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#c792ea",
        },
        "_": "let ",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
        },
        "_": "str ",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#89ddff",
        },
        "_": "= ",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#c3e88d",
        },
        "_": "\`Is this This?\`",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#89ddff",
        },
        "_": ";",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
    ],
  },
  Object {
    "nodes": Array [],
  },
  Object {
    "nodes": Array [
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#c792ea",
        },
        "_": "let ",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
        },
        "_": "regex ",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#89ddff",
        },
        "_": "= ",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#c3e88d",
        },
        "_": "/is/g",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#89ddff",
        },
        "_": ";",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
    ],
  },
  Object {
    "nodes": Array [
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#c792ea",
        },
        "_": "console",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#89ddff",
        },
        "_": ".",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#82aaff",
        },
        "_": "log",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#f78c6c",
        },
        "_": "(",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
        },
        "_": "regex",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#89ddff",
        },
        "_": ".",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#82aaff",
        },
        "_": "exec",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#f78c6c",
        },
        "_": "(",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
        },
        "_": "str",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#f78c6c",
        },
        "_": "))",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#89ddff",
        },
        "_": ";",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
    ],
  },
  Object {
    "nodes": Array [
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#546e7a",
        },
        "_": "// [ 'is', index: 5, input: 'Is this This?', groups: undefined ]",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
    ],
  },
  Object {
    "nodes": Array [],
  },
  Object {
    "nodes": Array [
      "unlike ",
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
        },
        "_": "test",
        "tags": Array [
          "code",
          "small",
        ],
      },
      ", the ",
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
        },
        "_": "exec",
        "tags": Array [
          "code",
          "small",
        ],
      },
      " method is stateful: ",
    ],
  },
  Object {
    "nodes": Array [
      Object {
        "$": Object {
          "height": "100px",
          "width": "100px",
        },
        "other_attributes": Object {
          "offset": 420,
        },
        "tags": Array [],
        "type": "png",
      },
    ],
  },
  Object {
    "nodes": Array [],
  },
  Object {
    "nodes": Array [
      ">string functions",
    ],
  },
  Object {
    "nodes": Array [
      "a) ",
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
        },
        "_": "str.match",
        "tags": Array [
          "code",
          "small",
        ],
      },
    ],
  },
  Object {
    "nodes": Array [
      Object {
        "$": Object {
          "color": "#c792ea",
        },
        "_": "let ",
        "tags": Array [
          "em",
        ],
      },
      Object {
        "$": Object {},
        "_": "str ",
        "tags": Array [
          "em",
        ],
      },
      Object {
        "$": Object {
          "color": "#89ddff",
        },
        "_": "= ",
        "tags": Array [
          "em",
        ],
      },
      Object {
        "$": Object {
          "color": "#c3e88d",
        },
        "_": "\`Is this This?\`",
        "tags": Array [
          "em",
        ],
      },
      Object {
        "$": Object {
          "color": "#89ddff",
        },
        "_": ";",
        "tags": Array [
          "em",
        ],
      },
    ],
  },
  Object {
    "nodes": Array [],
  },
  Object {
    "nodes": Array [],
  },
  Object {
    "nodes": Array [
      ">basic regex playground using ",
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
        },
        "_": "str.replace",
        "tags": Array [
          "code",
          "small",
        ],
      },
    ],
  },
  Object {
    "nodes": Array [
      Object {
        "$": Object {
          "height": "100px",
          "width": "100px",
        },
        "_": "codebox0",
        "other_attributes": Object {
          "do_highl_bra": 1,
          "is_width_pix": 1,
          "o_show_linenum": 1,
          "offset": 525,
          "syntax": "js",
          "width_raw": 100,
        },
        "tags": Array [],
        "type": "code",
      },
    ],
  },
  Object {
    "nodes": Array [
      Object {
        "$": Object {
          "height": "200px",
          "width": "200px",
        },
        "_": "codebox1",
        "other_attributes": Object {
          "do_highl_bra": 1,
          "is_width_pix": 1,
          "o_show_linenum": 1,
          "offset": 527,
          "syntax": "js",
          "width_raw": 200,
        },
        "tags": Array [],
        "type": "code",
      },
    ],
  },
  Object {
    "nodes": Array [
      Object {
        "$": Object {
          "height": "200px",
          "width": "200px",
        },
        "other_attributes": Object {
          "offset": 529,
        },
        "tags": Array [],
        "type": "png",
      },
    ],
  },
  Object {
    "nodes": Array [
      "*",
    ],
  },
  Object {
    "nodes": Array [
      ">my react alternative",
    ],
  },
  Object {
    "nodes": Array [
      Object {
        "$": Object {
          "height": "300px",
          "width": "300px",
        },
        "other_attributes": Object {
          "offset": 555,
        },
        "tags": Array [],
        "type": "png",
      },
    ],
  },
  Object {
    "nodes": Array [
      "- full code",
    ],
  },
  Object {
    "nodes": Array [
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
          "color": "#89ddff",
        },
        "_": "i",
        "tags": Array [
          "code",
          "small",
          "em",
        ],
      },
    ],
  },
]
`;

exports[`pipe snapshot tests tailing image not rendered 1`] = `
Array [
  Object {
    "nodes": Array [
      "promises can be chained together",
    ],
  },
  Object {
    "nodes": Array [
      ">example",
    ],
  },
  Object {
    "nodes": Array [
      Object {
        "$": Object {
          "height": "100px",
          "width": "100px",
        },
        "other_attributes": Object {
          "offset": 42,
        },
        "tags": Array [],
        "type": "png",
      },
    ],
  },
  Object {
    "nodes": Array [
      "the ",
      Object {
        "$": Object {
          "background-color": "#2B2B2B",
        },
        "_": ".then",
        "tags": Array [
          "code",
          "small",
        ],
      },
      " on line 5 will \\"magically\\" wait for the promise from line 3",
    ],
  },
  Object {
    "nodes": Array [],
  },
  Object {
    "nodes": Array [
      ">example2",
    ],
  },
  Object {
    "nodes": Array [
      Object {
        "$": Object {
          "height": "200px",
          "width": "200px",
        },
        "other_attributes": Object {
          "offset": 125,
        },
        "tags": Array [],
        "type": "png",
      },
    ],
  },
]
`;

exports[`pipe snapshot tests tailing image not rendered 2`] = `
Array [
  Object {
    "nodes": Array [
      "haha",
    ],
  },
  Object {
    "nodes": Array [
      Object {
        "$": Object {
          "height": "100px",
          "width": "100px",
        },
        "other_attributes": Object {
          "offset": 5,
        },
        "tags": Array [],
        "type": "png",
      },
      Object {
        "$": Object {
          "height": "200px",
          "width": "200px",
        },
        "other_attributes": Object {
          "offset": 6,
        },
        "tags": Array [],
        "type": "png",
      },
    ],
  },
]
`;
